# kaggle-competition-BBC-news-classification

./: README.md  kaggle.ipynb  models.ipynb  movieData.ipynb  pyproject.toml  submission.csv
